# cvhelper

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  server.py  settings.py
infrastructure/chroma-db-fargate/: README.md  app.py  cdk.context.json  package.json  requirements.txt
infrastructure/chroma-db-fargate/chroma_db_fargate/: chroma_db_fargate_stack.py
infrastructure/chroma-db-fargate/tests/unit/: test_chroma_db_fargate_stack.py
vectorstore/: cvpartner_client.py  get_cv.py  populate.py  split.py
