[tool.poetry]
name = "cvhelper"
version = "0.1.0"
description = ""
authors = ["Aleksander Stangeland <aleksander.stangeland@knowit.no>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
langchain = ">=0.0.325"
notebook = "^7.0.6"
gpt4all = "^2.0.2"
chromadb = "^0.4.15"
unstructured = "^0.10.28"
openai = "^0.28.1"
tiktoken = "^0.5.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
pandas = "^2.1.2"
plotly = "^5.18.0"
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
